client/my-sites/checkout/checkout-thank-you/style.scss
/* ... */
.checkout-processing-screen__content {
	position: relative;
	z-index: 1;
	max-width: 500px;
	margin: 0 auto;
	padding-bottom: 30px;
	color: var(--color-text-inverted);
}

/* Title */
@keyframes fade-in {
	0% {
		transform: translateY(0);
		opacity: 0;
	}
	100% {
		transform: translateY(-80px);
		opacity: 1;
	}
}

.is-section-checkout-pending .empty-content__title,
.is-section-checkout-thank-you .empty-content__title {
	font-size: $font-title-small;
	font-weight: normal;
}

.is-section-checkout-pending .empty-content__line,
.is-section-checkout-thank-you .empty-content__line {
	font-size: $font-body;
	font-weight: normal;
}

.checkout-thank-you__wordpress-logo {
	height: 180px;
	width: 180px;
	fill: var(--color-wpcom);
	margin: 0 auto;
	display: block;
	transition: transform 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
	transform: scale(0.13333);
	transform-origin: 50% 0;

	&.is-large {
		transform: scale(1);
	}
}

@mixin jetpack-primary-button() {
	// button colors imported from packages/calypso-color-schemes/src/shared/color-schemes/_jetpack-cloud.scss
	background-color: var(--studio-jetpack-green-50);
	border-color: var(--studio-jetpack-green-50);
	color: var(--color-text-inverted);

	&:hover,
	&:focus {
		background-color: var(--studio-jetpack-green-60);
		border-color: var(--studio-jetpack-green-60);
		color: var(--color-text-inverted);
	}

	&[disabled],
	&:disabled,
	&.disabled {
		color: var(--color-neutral-20);
		background-color: var(--color-surface);
		border-color: var(--color-neutral-5);
	}
}

.licensing-thank-you-auto-activation__product-info-loading {
	@include placeholder( --color-neutral-20 );
}

.licensing-thank-you-auto-activation__select {
	.select-dropdown__header {
		.select-dropdown__header-text {
			padding-right: 10px;
		}
	}
	.licensing-thank-you-auto-activation__dropdown-item-flex-container {
		display: flex;
		justify-content: space-between;
		&.has-seperator {
			border-top: 1px solid var(--color-neutral-10);
		}
		> span {
			display: block;
		}
	}
	.select-dropdown__options {
		max-height: 220px;
		overflow-y: scroll;
	}
	a.select-dropdown__item {
		padding: 0 16px;
		text-decoration: none;
		&:hover {
			color: var(--studio-jetpack-green);
		}
		.select-dropdown__item-text {
			display: block;
			position: static;
			.licensing-thank-you-auto-activation__dropdown-item-text {
				padding-right: 10px;
			}
		}
		&::before {
			display: none;
		}
		&.is-selected {
			background-color: var(--color-neutral-10);
		}
	}
}

.licensing-thank-you-manual-activation-instructions__step-number {
	display: inline-flex;
	justify-content: center;
	align-items: center;

	margin-right: 12px;

	font-weight: bold;
	text-align: center;
	color: var(--color-text-inverted);

	background-color: var(--studio-jetpack-green-40);

	border-radius: 24px; /* stylelint-disable-line scales/radii */

	width: 28px;
	height: 28px;
}

.licensing-activation .licensing-thank-you-manual-activation-instructions__button.button {
	margin-top: 0;
}

.licensing-thank-you-manual-activation-license-key__key {
	margin-top: 40px;
}

.licensing-thank-you-manual-activation-license-key__clipboard {
	display: flex;

	margin-top: 8px;

	.licensing-thank-you-manual-activation-license-key__input.form-text-input {
		margin-right: 8px;

		background-color: var(--studio-gray-0);

		border: none;
	}

	.licensing-thank-you-manual-activation-license-key__input.form-text-input.is-loading {
		@include placeholder( --color-neutral-20 );
	}
}

.licensing-activation .licensing-thank-you-manual-activation-license-key__button.button {
	margin-top: 0;
	min-width: 100px;
}

.jetpack-checkout-thank-you {
	.jetpack-checkout-thank-you__card,
	.jetpack-checkout-thank-you__card-loading {
		box-shadow: 0 0 40px 0 #00000014;

		width: 100%;
		max-width: none;
		padding: 16px;

		@include break-mobile {
			width: auto;
			max-width: 650px;
			padding: 96px;
		}

		.jetpack-checkout-thank-you__main-message {
			font-size: $font-headline-small;
			font-weight: 700;
			margin-bottom: 24px;

			@include break-mobile {
				font-size: $font-headline-medium;
			}
		}

		.jetpack-checkout-thank-you__sub-message-loading,
		.jetpack-checkout-thank-you__sub-message {
			font-size: $font-title-medium;
			font-weight: 500;
			margin-bottom: 64px;
		}

		.jetpack-checkout-thank-you__email-message-loading,
		.jetpack-checkout-thank-you__email-message {
			margin-top: -32px;
			margin-bottom: 64px;
		}

		.jetpack-checkout-thank-you__button,
		.jetpack-checkout-thank-you__button:visited {
			border-radius: calc(2px * 2);
			@include jetpack-primary-button;
		}
	}

	.jetpack-checkout-thank-you__sub-message-loading,
	.jetpack-checkout-thank-you__email-message-loading {
		@include placeholder( --color-neutral-20 );
	}
}

